force-app/main/default/objects/OA_Enrichment_Change_Log__c/OA_Enrichment_Change_Log__c.object-meta.xml
<CustomObject>
    <description>Audit trail: one row per field change made or previewed by the enrichment writer. Holds before-snapshot for rollback.</description>
    <label>OA Enrichment Change Log</label>
    <nameField>
        <displayFormat>CHG-{00000}</displayFormat>
        <label>OA Enrichment Change Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OA Enrichment Change Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>