force-app/main/default/objects/OA_Enrichment_Change_Log__c/fields/Before_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Before_Snapshot__c</fullName>
    <label>Before Snapshot</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>