force-app/main/default/objects/OA_Enrichment_Change_Log__c/fields/Changed_At__c.field-meta.xml
<CustomField>
    <fullName>Changed_At__c</fullName>
    <label>Changed At</label>
    <type>DateTime</type>
</CustomField>