force-app/main/default/objects/OA_Enrichment_Change_Log__c/fields/Connector_Run__c.field-meta.xml
<CustomField>
    <fullName>Connector_Run__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Connector Run</label>
    <referenceTo>OA_Connector_Run__c</referenceTo>
    <relationshipLabel>OA_Enrichment_Change_Logs</relationshipLabel>
    <relationshipName>OA_Enrichment_Change_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>