force-app/main/default/objects/OA_Enrichment_Change_Log__c/fields/Reversible__c.field-meta.xml
<CustomField>
    <fullName>Reversible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reversible</label>
    <type>Checkbox</type>
</CustomField>