force-app/main/default/objects/OA_Enrichment_Change_Log__c/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <label>Target Object</label>
    <length>80</length>
    <type>Text</type>
</CustomField>