force-app/main/default/objects/OA_Enrichment_Change_Log__c/fields/Write_Mode__c.field-meta.xml
<CustomField>
    <fullName>Write_Mode__c</fullName>
    <label>Write Mode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>